--- a/2017 Scouting Collection/2017 Scouting Collection/Base.lproj/Main.storyboard
+++ b/2017 Scouting Collection/2017 Scouting Collection/Base.lproj/Main.storyboard
@@ -295,7 +295,6 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="endMatchButtonPressed:" destination="KP8-II-Zc9" eventType="touchUpInside" id="z3x-lO-Aht"/>
                                     <action selector="finishPressed:" destination="fLy-DQ-Gag" eventType="touchUpInside" id="r7m-99-One"/>
                                 </connections>
                             </button>
@@ -305,15 +304,32 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pzm-hi-dCD">
+                                <rect key="frame" x="20" y="30" width="133" height="56"/>
+                                <color key="backgroundColor" red="0.92941176469999998" green="0.41568627450000001" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="133" id="GLn-hT-9Ad"/>
+                                    <constraint firstAttribute="height" constant="56" id="l6n-En-E0h"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="22"/>
+                                <state key="normal" title="Rescout">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="rescoutPressed:" destination="fLy-DQ-Gag" eventType="touchUpInside" id="qas-q6-YnB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fib-Mp-X6C" firstAttribute="centerX" secondItem="mpR-bX-suV" secondAttribute="centerX" id="0xe-bQ-O9A"/>
                             <constraint firstItem="bkR-6t-ACS" firstAttribute="top" secondItem="hEm-HJ-LdC" secondAttribute="bottom" constant="10" id="1SS-ra-zuq"/>
+                            <constraint firstItem="pzm-hi-dCD" firstAttribute="centerY" secondItem="bkR-6t-ACS" secondAttribute="centerY" id="7vw-EN-gLL"/>
                             <constraint firstItem="fib-Mp-X6C" firstAttribute="top" secondItem="hEm-HJ-LdC" secondAttribute="bottom" constant="30" id="BPh-PG-KXS"/>
                             <constraint firstItem="zLd-aR-NIv" firstAttribute="centerX" secondItem="mpR-bX-suV" secondAttribute="centerX" id="GFG-jr-Sbo"/>
                             <constraint firstItem="zLd-aR-NIv" firstAttribute="top" secondItem="GQ9-nt-vba" secondAttribute="bottom" constant="-8" id="OgK-Gp-nVm"/>
                             <constraint firstItem="GQ9-nt-vba" firstAttribute="centerX" secondItem="mpR-bX-suV" secondAttribute="centerX" id="QiM-aa-sOD"/>
+                            <constraint firstItem="pzm-hi-dCD" firstAttribute="leading" secondItem="mpR-bX-suV" secondAttribute="leadingMargin" id="irn-Xk-dXd"/>
                             <constraint firstItem="GQ9-nt-vba" firstAttribute="centerY" secondItem="mpR-bX-suV" secondAttribute="centerY" id="xkf-go-enK"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bkR-6t-ACS" secondAttribute="trailing" id="y1b-r4-RuR"/>
                         </constraints>
@@ -322,6 +338,7 @@
                         <outlet property="qrC" destination="GQ9-nt-vba" id="kqR-We-WfU"/>
                         <outlet property="teamMatchLabel" destination="zLd-aR-NIv" id="vUC-iN-2gk"/>
                         <segue destination="TJn-EU-tt9" kind="unwind" identifier="unwindQRToHome" unwindAction="realHomeUnwindWithUnwindSegue:" id="xJV-we-KuR"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="QRToPrematch" id="MBJ-5N-7AD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yqY-V8-7zu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1589,5 +1606,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Y2k-8C-i5z"/>
+        <segue reference="MBJ-5N-7AD"/>
     </inferredMetricsTieBreakers>
 </document>
